fixed new booking overlap

--- a/react-app/src/components/ListingComponent/SingleListing/SingleListing.css
+++ b/react-app/src/components/ListingComponent/SingleListing/SingleListing.css
@@ -6,6 +6,11 @@
     /* color: brown; */
 }
 
+.listing-info img {
+    max-width: 700px;
+    border-radius: 15px;
+}
+
 /* .listings > *{
     display: flex;
     flex-wrap: wrap;
